<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/primary_gradient_colour">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_padding"
        android:layout_marginEnd="@dimen/medium_padding">

        <FrameLayout
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/current_weather_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/location_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{currentWeather.name}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xlarge_text_size" />

                <ImageView
                    android:id="@+id/weather_condition_icon_image_view"
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:layout_marginTop="@dimen/large_padding"
                    android:contentDescription="@string/weather_condition_icon" />

                <TextView
                    android:id="@+id/temperature_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{currentWeather.main.temp.substring(0,2)}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/xxlarge_text_size" />

                <TextView
                    android:id="@+id/weather_condition_text_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_text_size" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/top_view_progress_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />


        </FrameLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/day_forecast_card_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_height"
            android:layout_marginTop="@dimen/large_padding"
            android:background="@color/primary_colour_blue_01"
            android:focusable="true"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_colour_blue_01"
                android:paddingStart="@dimen/medium_padding"
                android:paddingEnd="@dimen/medium_padding">

                <TextView
                    android:id="@+id/daily_forecast_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_padding"
                    android:paddingBottom="@dimen/small_padding"
                    android:text="@string/five_day_forecast"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_height"
                    android:background="@color/secondary_colour_blue_02"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/daily_forecast_title_text_view" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/day_forecast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_colour_blue_01"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_1"
                    tools:listitem="@layout/day_forecast_item" />

                <ProgressBar
                    android:id="@+id/daily_forecast_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/hourly_forecast_card_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_height"
            android:layout_marginTop="@dimen/small_padding"
            android:background="@color/primary_colour_blue_01"
            android:focusable="true"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_forecast_card_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_colour_blue_01"
                android:paddingStart="@dimen/medium_padding"
                android:paddingEnd="@dimen/medium_padding">

                <TextView
                    android:id="@+id/hourly_forecast_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_padding"
                    android:paddingBottom="@dimen/small_padding"
                    android:text="@string/daily_forecast"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_height"
                    android:background="@color/secondary_colour_blue_02"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hourly_forecast_title_text_view" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourly_forecast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_colour_blue_01"
                    android:scrollbars="horizontal"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    tools:listitem="@layout/hourly_forecast_item"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pop_forecast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_colour_blue_01"
                    android:scrollbars="horizontal"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:listitem="@layout/hourly_forecast_item"/>

                <ProgressBar
                    android:id="@+id/hourly_forecast_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/weather_condition_map_card_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_height"
            android:layout_marginTop="@dimen/small_padding"
            android:focusable="true"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourly_forecast_card_view">

            <ImageView
                android:id="@+id/weather_map_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_map" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
